--- a/src/index.html
+++ b/src/index.html
@@ -12,19 +12,25 @@
     <!-- <link rel="stylesheet" href="styles.css" /> -->
   </head>
   <body class="body">
-    <h1 class="title">Find image</h1>
+    <div class="container">
+      <h1 class="title">Find image</h1>
 
-    <form class="search-form" id="search-form">
-      <input
-        class="input__form"
-        type="text"
-        name="query"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button class="submit-form" type="submit">Search</button>
-    </form>
+      <form class="search-form" id="search-form">
+        <input
+          class="input__form"
+          type="text"
+          name="query"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button class="btn submit-form" type="submit">Search</button>
+      </form>
 
-    <ul class="gallery"></ul>
+      <ul class="gallery js-gallery"></ul>
+      <button class="btn js-load_more" type="button" data-action="load-more">
+        <span class="loader" role="status" aria-hidden="true"></span
+        ><span class="label">Show more</span>
+      </button>
+    </div>
   </body>
 </html>
