--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
       <form class="search-form" id="search-form">
         <input
-          class="input__form"
+          class="input input__form"
           type="text"
           name="query"
           autocomplete="off"
@@ -27,9 +27,14 @@
       </form>
 
       <ul class="gallery js-gallery"></ul>
-      <button class="btn js-load_more" type="button" data-action="load-more">
-        <span class="loader" role="status" aria-hidden="true"></span
-        ><span class="label">Show more</span>
+      <button
+        class="btn btn-more js-load_more"
+        type="button"
+        data-action="load-more"
+        disabled="true"
+      >
+        <span class="loader" role="status" aria-hidden="true"></span>
+        <span class="label">Show more</span>
       </button>
     </div>
   </body>
