добавляет модальное окно и исправляет ошибки

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
       </form>
 
       <ul class="gallery js-gallery"></ul>
+      <div class="modal js-lightbox"></div>
       <button
         class="btn btn-more js-load_more"
         type="button"
